--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -6,15 +6,17 @@
     <% if (items.length===0) { %>
     <p class="alert alert-danger">there is no items</p>
     <%} else { %>
-    <table>
+    <table class="table table-hover table-dark">
         <thead>
-            <td>Id</td>
-            <td>Time</td>
-            <td>Name</td>
-            <td>Price</td>
-            <td>Amount</td>
-            <td>Total</td>
-            <td></td>
+            <td scope="col">Id</td>
+            <td scope="col">Time</td>
+            <td scope="col">Name</td>
+            <td scope="col">Price</td>
+            <td scope="col">Amount</td>
+            <td scope="col">Total</td>
+            <td scope="col">Save Amount</td>
+            <td scope="col">Order</td>
+            <td scope="col"></td>
         </thead>
         <tbody>
             <% for (let i = 0;i < items.length; i++ ) { %>
@@ -27,15 +29,25 @@
                     <td><input type="text" name="amount" value="<%= items[i].amount %>"></td>
                     <td><%= items[i].amount * items[i].price %> $</td>
                     <td>
+                        <input type="hidden" name="productId" value="<%= items[i].productId %>">
+                        <input type="hidden" name="name" value="<%= items[i].name %>">
+                        <input type="hidden" name="price" value="<%= items[i].price %>">
                         <input type="hidden" name="cartId" value="<%= items[i]._id %>">
+                        <input type="hidden" name="redirectTo" value="/cart/<%= items[i]._id %>">
                         <input type="submit" class="btn btn-success" value="Save" formaction="/cart/save">
-                        <input type="submit" class="btn btn-danger" value="Delete" formaction="/cart/delete">
                     </td>
+                    <td><input type="submit" class="btn btn-success" value="Order" formaction="/order"></td>
+                    <td><input type="submit" class="btn btn-danger" value="Cancel" formaction="/cart/delete"></td>
                 </form>
             </tr>
             <% } %>
         </tbody>
     </table>
+    <form method="POST" action="/cart/deleteAll">
+        <input type="hidden" name="userId" value="<%= items[0].userId %>">
+        <input type="submit" class="btn btn-danger" value="Delete All">
+    </form>
+
     <%}%>
 </div>
 <%-include('./parts/footer') %>
